Fix spacing and some other bugs

--- a/src/qlever/evaluation/www/treant.css
+++ b/src/qlever/evaluation/www/treant.css
@@ -56,6 +56,6 @@
 .font-size-80 { font-size: 80%; }
 
 table td {
-	padding-top: 0.3em !important;
-  padding-bottom: 0.3em !important;
+	padding-top: 0.2em !important;
+  padding-bottom: 0.2em !important;
 }
